@@ -1,8 +1,9 @@
 package fact.it.playlistservice.service;
 
 import fact.it.playlistservice.dto.PlaylistResponse;
-import fact.it.playlistservice.dto.SongDto;
+
 import fact.it.playlistservice.dto.PreferenceResponse;
+import fact.it.playlistservice.dto.SongDto;
 import fact.it.playlistservice.model.Playlist;
 import fact.it.playlistservice.model.PlaylistSong;
 import fact.it.playlistservice.repository.PlaylistRepository;
@@ -11,12 +12,14 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -46,9 +49,7 @@ public class PlaylistService {
                 .block();
 
         List<PlaylistSong> songList = new ArrayList<>();
-        for (PreferenceResponse pref : preferenceResonses){
-            System.out.println(pref.getName());
-        }
+        assert preferenceResonses != null;
 
         for (PreferenceResponse preference : preferenceResonses){
             String[] codeArray = webClient.get()
@@ -58,11 +59,11 @@ public class PlaylistService {
                     .bodyToMono(String[].class)
                     .block();
 
-            if( codeArray!= null || codeArray.length!=0 ) {
+            if( codeArray!= null || codeArray.length != 0) {
 
                 List<PlaylistSong> playlistSongs = Arrays.stream(codeArray)
-                        .map(code -> new PlaylistSong(code))
-                        .collect(Collectors.toList());
+                        .map(PlaylistSong::new)
+                        .toList();
 
 
 
@@ -73,6 +74,7 @@ public class PlaylistService {
         if (!songList.isEmpty()){
             playlist.setPlaylistSongList(songList);
             playlistRepository.save(playlist);
+            //System.out.println(playlist.getPlaylistSongList());
             return true;
         } else {
             return false;
@@ -82,16 +84,9 @@ public class PlaylistService {
     public List<PlaylistResponse> getAllPlaylistsByUserId(String userId){
         return playlistRepository.findAllByUserId(userId)
                 .stream()
-                .map(playlist -> new PlaylistResponse(
-                        playlist.getCode(),
-                        playlist.getPlaylistSongList()
-                )).toList();
+                .map(this::mapToPlaylistResponse).toList();
     }
-    /*public PlaylistResponse getPlaylistByCode(String code){
-        Playlist playlist = playlistRepository.findByCode(code);
 
-        return new PlaylistResponse(playlist.getCode(),playlist.getPlaylistSongList());
-    }*/
 
 
     public void deletePlaylist(String code, String userId) {
@@ -102,5 +97,25 @@ public class PlaylistService {
 
     }
 
+        private PlaylistResponse mapToPlaylistResponse(Playlist playlist) {
+
+            List<Mono<SongDto>> songMonos = playlist.getPlaylistSongList().stream()
+                    .map(song -> webClient.get()
+                            .uri("http://" + songlibraryServiceBaseUrl + "/api/song",
+                                    uriBuilder -> uriBuilder.queryParam("code", song.getCode()).build())
+                            .retrieve()
+                            .bodyToMono(SongDto.class))
+                    .collect(Collectors.toList());
+
+            List<SongDto> songList = Mono.zip(songMonos, objects -> Arrays.stream(objects)
+                    .map(obj -> (SongDto) obj)
+                    .collect(Collectors.toList())).block();
+
+            return PlaylistResponse.builder()
+                    .userId(playlist.getUserId())
+                    .code(playlist.getCode())
+                    .songList(songList)
+                    .build();
+        }
 
 }
